<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClassCollab</string>
    <string name="action_settings">Settings</string>
    <string name="georgia_tech_logo">Georgia Tech Logo</string>
    <string name="email_id">GT Email/ID</string>
    <string name="password">Password</string>
    <string name="your_classes">Your classes</string>
    <string name="enable_location">Check-in</string>
    <string name="status_online">My Status: Online</string>
    <string name="status_offline">My Status: Offline</string>
    <string name="group_chat">Group Chat</string>
    <string name="local_service_started">Local service started</string>
    <string name="local_service_stopped">Local service stopped</string>
	<string name="service_name">GPS Logger</string>
    <string name="messaging">Messaging</string>
    <string name="message_cannot_be_sent">Message cannot be sent</string>
    <string name="OK">OK</string>
    <string name="georgia_tech_colab_app">Georgia Tech - Colab App</string>
    <string name="login_here_button">Login here</string>
    <string name="about_student">About:</string>
    <string name="distance_student">Distance:</string>
    <string name="status_student">Status:</string>
    <string name="name_student">Name:</string>
    <string name="messages">Messages:</string>
    <string name="send">Send</string>
</resources>