<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="400dp" >

        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/pager_title_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="#003049"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="#fff" />
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/enableLocationButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1" 
            android:text="@string/enable_location"/>

        <Button
            android:id="@+id/chooseStatusButton"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_width="wrap_content"
            android:text="@string/status_online"/>
       <Button
            android:id="@+id/groupChatButton"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_width="wrap_content"
            android:text="@string/group_chat"/>
       
    </LinearLayout>

</RelativeLayout>